@@ -1,3 +1,12 @@
+2008-01-06  Luca Bruno  <lethalman88@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        Remove curl handles immediately if the timer is not running.
+
+        * platform/network/curl/ResourceHandleManager.cpp:
+        (WebCore::ResourceHandleManager::cancel):
+
 2008-01-06  Alp Toker  <alp@atoker.com>
 
         Reviewed by Eric.
